# gha-repo-index

./: .gitignore  CHANGELOG.md  Makefile  README.md  action.yaml  pyproject.toml
.github/scripts/: delete_branch_pr_tag.sh
.github/workflows/: test.yml
docs/: ecosystem.md
scripts/: collect-repo-metadata.sh  common.sh  generate-registry.sh  render.sh  summarize-with-ai.sh
tests/fixtures/: readme_base64.txt  repo_contents.json  repo_list.json
tests/test_helper/: gh_mock.bash
tests/unit/: test_collect_metadata.bats  test_common.bats  test_generate_registry.bats  test_infra_files.bats  test_render.bats  test_summarize_ai.bats
